--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1>Welcome to my page!</h1>
       <img src="Me.jpg" alt="my_pict" width="275" height="300">
       <h2>About me &#128512;</h2>
-      <p>Hey! I'm Megan Jia, an undergraduate student majoring in statistics at <a href=https://www.wisc.edu> University of Wisconsin-Madison</a>. I'm interested in digital studies and data science. I like reading books and playing Animal Crossing when I'm free. I enjoy traveling and meeting interesting people all over the world! </p>
+      <p>Hey! I'm Megan Jia, a postgraduate student at LSE majoring in data science. I finished my undergraduate studies at <a href=https://www.wisc.edu> University of Wisconsin-Madison</a>. I'm interested in digital studies and data science. I like reading books and playing Animal Crossing when I'm free. I enjoy traveling and meeting interesting people all over the world! </p>
       <h3>Some things you can find in my page</h3>
       <ul>
        <li>Favorite Food </li>
